# chat-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.chat-proxy  Dockerfile.web-search-mcp  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
config/web_search/: default.yaml  fetch_policies.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  INDEX.md  PRODUCTION.md  PROGRESS.md
docs/images/: README.md
docs/plans/: 01-vllm-migration.md  02-chat-proxy-api.md  03-streaming.md  04-open-webui-web-search-filter.md  05-chat-proxy-logging.md  06-web-search-temporal-grounding.md  07-public-reference-documentation.md  08-security-and-platform-boundaries.md  09-api-contract-and-request-validation.md  10-final-repository-quality-cleanup.md
examples/python/: 01_list_models.py  02_plain_chat.py  03_streaming.py  04_function_calling.py  05_web_search.py  06_vision.py  07_reasoning.py  08_benchmark_streaming.py  README.md  settings.py
models/qwen3-30b-instruct-2507/: config.pbtxt
open_webui/: README.md  inject_web_search.py
open_webui/functions/: proxy_web_search_filter.py
src/adapters/: http_api.py  (+2 more)
tests/: test_chat_completion_validation.py  test_http_api_contract.py  test_http_auth.py  test_http_stream_context.py  test_owui_inject_web_search.py  test_reasoning_fallback.py  test_request_logging.py  test_search_locale.py  test_sse_events.py  test_streaming.py  test_vllm_inference.py  test_web_search_fetch_resilience.py  test_web_search_logging.py  test_web_search_response_contract.py  test_web_search_system_prompt.py
(+61 files in other folders)
